--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,9 @@
     display: flex;
     font-size: 5rem;
     color: lightgray;
-    gap: 0;
     margin-top: 2rem;
+    justify-content: center;
+    gap: 1rem;
 }
 
 .numberContainer {
@@ -17,7 +18,6 @@
     background-color: rgb(19, 28, 38);
     width: 7rem;
     height: 7rem;
-    margin: auto;
     justify-content: center;
     align-items: center;
 }   
