--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,32 @@
-* {
-    margin: 0;
-    padding: 0;
+*, *::after, *::before {
     box-sizing: border-box;
 }
 
-.container {
-    display: flex;
-    font-size: 5rem;
-    color: lightgray;
-    margin-top: 2rem;
-    justify-content: center;
-    gap: 1rem;
+.flipCard {
+    display: inline-flex;
+    flex-direction: column;
+    font-size: 7rem;
+
 }
 
-.numberContainer {
-    display: flex;
-    background-color: rgb(19, 28, 38);
-    width: 7rem;
-    height: 7rem;
-    justify-content: center;
-    align-items: center;
-}   
+.top, .bottom {
+    height: 0.75em;
+    line-height: 1;
+    padding: 0.5em;
+}
 
+.top {
+    background-color: black;
+    color: blue;
+    border-top-left-radius: 0.5rem;
+    border-top-right-radius: 0.5rem;
+}
+
+.bottom {
+    background-color: red;
+    color: yellow;
+    display: flex;
+    align-items: flex-end;
+    border-bottom-left-radius: 0.5rem;
+    border-bottom-right-radius: 0.5rem;
+}
