--- a/styles.css
+++ b/styles.css
@@ -1,69 +1,95 @@
 *, *::after, *::before {
     box-sizing: border-box;
-    font-size: 3rem;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2.25rem;
+  }
+  
+  body {
+    background-color: #f2f1ed;
     color: #de4848;
-}
-
-.flipCard {
+  }
+  
+  .flip-card {
     position: relative;
     display: inline-flex;
     flex-direction: column;
-
-}
-
-.top, 
-.bottom, 
-.flipCard.flip::after, 
-.flipCard.flip::before {
-    height: 0.75em;
+    box-shadow: 0 2px 3px 0 rgba(0, 0, 0, .2);
+    border-radius: .1em;
+  }
+  
+  .top,
+  .bottom,
+  .flip-card .top-flip,
+  .flip-card .bottom-flip {
+    height: .75em;
     line-height: 1;
-    padding: 0.25em;
+    padding: .25em;
     overflow: hidden;
-}
-
-.top,
-.flipCard.flip::before {
+  }
+  
+  .top,
+  .flip-card .top-flip {
     background-color: #f7f7f7;
-    border-top-left-radius: 0.09em;
-    border-top-right-radius: 0.09em;
-}
-
-.bottom,
-.flipCard.flip::after {
+    border-top-right-radius: .1em;
+    border-top-left-radius: .1em;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  }
+  
+  .bottom,
+  .flip-card .bottom-flip {
     background-color: white;
     display: flex;
     align-items: flex-end;
-    border-bottom-left-radius: 0.09em;
-    border-bottom-right-radius: 0.09em;
-}
-
-.flipCard.flip::before {
+    border-bottom-right-radius: .1em;
+    border-bottom-left-radius: .1em;
+  }
+  
+  .flip-card .top-flip {
     position: absolute;
-    content: "1";
     width: 100%;
-    animation: flip-top 1000ms ease-in 1000ms infinite;
+    animation: flip-top 250ms ease-in;
     transform-origin: bottom;
-}
-
-@keyframes flip-top {
+  }
+  
+  @keyframes flip-top {
     100% {
-        transform: rotateX(90deg);
+      transform: rotateX(90deg);
     }
-}
-
-.flipCard.flip::after {
+  }
+  
+  .flip-card .bottom-flip {
     position: absolute;
     bottom: 0;
-    content: "2";
     width: 100%;
-    animation: flip-bottom 1000ms ease-out 1000ms infinite;
-    background-color: yellow;
+    animation: flip-bottom 250ms ease-out 250ms;
     transform-origin: top;
     transform: rotateX(90deg);
-}
-
-@keyframes flip-bottom {
+  }
+  
+  @keyframes flip-bottom {
     100% {
-        transform: rotateX(0deg);
+      transform: rotateX(0deg);
     }
-}
+  }
+  
+  .container {
+    display: flex;
+    gap: .5em;
+    justify-content: center;
+  }
+  
+  .container-segment {
+    display: flex;
+    flex-direction: column;
+    gap: .1em;
+    align-items: center;
+  }
+  
+  .segment {
+    display: flex;
+    gap: .1em;
+  }
+  
+  .segment-title {
+    font-size: 1rem;
+  }
