fix logic to create second objetc

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
   
   body {
     background-color: #f2f1ed;
-    color: #de4848;
+    color: lightgray;
   }
   
   .flip-card {
@@ -29,7 +29,7 @@
   
   .top,
   .flip-card .top-flip {
-    background-color: #f7f7f7;
+    background-color: black;
     border-top-right-radius: .1em;
     border-top-left-radius: .1em;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
@@ -37,7 +37,7 @@
   
   .bottom,
   .flip-card .bottom-flip {
-    background-color: white;
+    background-color: black;
     display: flex;
     align-items: flex-end;
     border-bottom-right-radius: .1em;
